--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -82,6 +84,166 @@
   --default-transition-timing-function: "linear";
   
   }
+  
+  @layer utilities {
+    .bg-conic-gradient {
+      background-image: conic-gradient(from 225deg, #FFC876, #79FFF7, #9F53FF, #FF98E2, #FFC876);
+    }
+  }
+
+  .benefit-card-1 {
+    background-image: url(/public/assets/benefits/card-1.svg)
+    }
+    
+    .benefit-card-2 {
+    background-image: url(/public/assets/benefits/card-2.svg)
+    }
+    
+    .benefit-card-3 {
+    background-image: url(/public/assets/benefits/card-3.svg)
+    }
+    
+    .benefit-card-4 {
+    background-image: url(/public/assets/benefits/card-4.svg)
+    }
+    
+    .benefit-card-5 {
+    background-image: url(/public/assets/benefits/card-5.svg)
+    }
+    
+    .benefit-card-6 {
+    background-image: url(/public/assets/benefits/card-6.svg)
+    }
+
+    @layer components {
+      .container {
+      @apply max-w-[77.5rem] mx-auto px-5 md:px-10 lg:px-15 xl:max-w-[87.5rem]
+      }
+      
+      .h1 {
+      @apply font-semibold text-[2.5rem] leading-[3.25rem] md:text-[2.75rem] md:leading-[3.75rem] lg:text-[3.25rem] lg:leading-[4.0625rem] xl:text-[3.75rem] xl:leading-[4.5rem]
+      }
+      
+      .h2 {
+      @apply text-[1.75rem] leading-[2.5rem] md:text-[2rem] md:leading-[2.5rem] lg:text-[2.5rem] lg:leading-[3.5rem] xl:text-[3rem] xl:leading-tight
+      }
+      
+      .h3 {
+      @apply text-[2rem] leading-normal md:text-[2.5rem]
+      }
+      
+      .h4 {
+      @apply text-[2rem] leading-normal
+      }
+      
+      .h5 {
+      @apply text-2xl leading-normal
+      }
+      
+      .h6 {
+      @apply font-semibold text-lg leading-8
+      }
+      
+      .body-1 {
+      @apply text-[0.875rem] leading-[1.5rem] md:text-[1rem] md:leading-[1.75rem] lg:text-[1.25rem] lg:leading-8
+      }
+      
+      .body-2 {
+      @apply font-light text-[0.875rem] leading-6 md:text-base
+      }
+      
+      .caption {
+      @apply text-sm
+      }
+      
+      .tagline {
+      @apply font-grotesk font-light text-xs tracking-tagline uppercase
+      }
+      
+      .quote {
+      @apply font-code text-lg leading-normal
+      }
+      
+      .button {
+      @apply font-code text-xs font-bold uppercase tracking-wider
+      }
+      
+      }
+
+    @Utility tap-highlight-color {
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+      }
+    
+    @layer base {
+        body {
+        @apply font-sans bg-n-8 text-n-1 text-base
+        }
+    }
+
+
+    .rotate-45 {
+@apply rotate-[45deg]
+}
+
+.rotate-90 {
+@apply rotate-[90deg]
+}
+
+.rotate-135 {
+@apply rotate-[135deg]
+}
+
+.rotate-180 {
+@apply rotate-[180deg]
+}
+
+.rotate-225 {
+@apply rotate-[225deg]
+}
+
+.rotate-270 {
+@apply rotate-[270deg]
+}
+
+.rotate-315 {
+@apply rotate-[315deg]
+}
+
+.rotate-360 {
+@apply rotate-[360deg]
+}
+
+.-rotate-45 {
+@apply rotate-[-45deg]
+}
+
+.-rotate-90 {
+@apply rotate-[-90deg]
+}
+
+.-rotate-135 {
+@apply rotate-[-135deg]
+}
+
+.-rotate-180 {
+@apply rotate-[-180deg]
+}
+
+.-rotate-225 {
+@apply rotate-[-225deg]
+}
+
+.-rotate-270 {
+@apply rotate-[-270deg]
+}
+
+.-rotate-315 {
+@apply rotate-[-315deg]
+}
+
+.-rotate-360 {
+@apply rotate-[-360deg]
+}
 
 :root {
   --radius: 0.625rem;
@@ -152,11 +314,11 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
